kubernetes/development.yaml
apiVersion: v1  
kind: Namespace  
metadata:  
  name: deeplynxv3-dev
  labels:
    name: deeplynxv3-dev
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deeplynxv3
  namespace: deeplynxv3-dev
spec:
  selector:
    matchLabels:
      app: deeplynxv3
  template:
    metadata:
      labels:
        app: deeplynxv3
    spec:
      containers:
        - name: deeplynxv3
          image: ${CI_REGISTRY}/${CI_REGISTRY_PATH}:deeplynxv3-app-${GITHUB_RUN_NUMBER}
          imagePullPolicy: Always
          resources:
            limits:
              memory: "4Gi"
              cpu: "1500m"
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: deeplynxv3-service
  namespace: deeplynxv3-dev
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 3000
  selector:
    app: deeplynxv3
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: deeplynxv3-ingress
  namespace: deeplynxv3-dev
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/configuration-snippet: |
      more_clear_headers "strict-transport-security";
      more_clear_headers "x-content-type-options";
      more_clear_headers "x-frame-options";
      more_clear_headers "content-security-policy";
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
  rules:
    - host: nexus.dev.inl.gov
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: deeplynxv3-service
                port:
                  number: 80
---
# # Database if needed for deployment

# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   namespace: deeplynxv3-dev
#   labels:
#     app: deeplynxv3-db
#   name: deeplynxv3-db
# spec:
#   replicas: 1
#   selector:
#     matchLabels:
#       app: deeplynxv3-db
#   strategy:
#     type: Recreate
#   template:
#     metadata:
#       labels:
#         app: deeplynxv3-db
#     spec:
#       containers:
#         - env:
#             - name: POSTGRES_PASSWORD
#               valueFrom:
#                 secretKeyRef:
#                   name: deeplynxv3-secrets
#                   key: POSTGRES_PASSWORD
#             - name: POSTGRES_USER
#               value: ${POSTGRES_USER}
#             - name: POSTGRES_DB
#               value: ${POSTGRES_DB}
#           image: ${CI_REGISTRY}/${CI_REGISTRY_PATH}:deeplynxv3-db-${GITHUB_RUN_NUMBER}
#           name: deeplynxv3-db
#           ports:
#             - containerPort: 5432
#           volumeMounts:
#             - mountPath: "/var/lib/postgresql/data"
#               subPath: deeplynxv3
#               name: deeplynxv3-db-pvc
#           resources:
#             limits:
#               cpu: "250m"
#               memory: "1024M"
#       restartPolicy: Always
#       volumes:
#         - name: deeplynxv3-db-pvc
#           persistentVolumeClaim:
#             claimName: deeplynxv3-db-pvc
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: deeplynxv3-db-service
#   namespace: deeplynxv3-dev
# spec:
#   type: ClusterIP
#   ports:
#     - name: "5432"
#       port: 5432
#       targetPort: 5432
#   selector:
#     app: deeplynxv3-db
# ---

# # Storage

# apiVersion: v1
# kind: PersistentVolumeClaim
# metadata:
#   namespace: deeplynxv3-dev
#   labels:
#     app: deeplynxv3-db
#   name: deeplynxv3-db-pvc
# spec:
#   accessModes:
#     - ReadWriteOnce
#   resources:
#     requests:
#       storage: 1Gi
