kubernetes/sandbox.yaml
# kubernetes yaml file for development
apiVersion: v1
kind: Namespace
metadata:
  name: deeplynxv3-sandbox
  labels:
    name: deeplynxv3-sandbox

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: deeplynxv3-sandbox
  namespace: deeplynxv3-sandbox
spec:
  selector:
    matchLabels:
      app: deeplynxv3-sandbox
  template:
    metadata:
      labels:
        app: deeplynxv3-sandbox
    spec:
      containers:
        - name: deeplynxv3-sandbox
          image: ${CI_REGISTRY}/${CI_REGISTRY_PATH}:deeplynxv3-ui-${GITHUB_RUN_NUMBER}
          imagePullPolicy: Always
          resources:
            limits:
              memory: "4Gi"
              cpu: "1500m"
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: duckdb-storage
              mountPath: /data/duckdb
      volumes:
        - name: duckdb-storage
          persistentVolumeClaim:
            claimName: deeplynx-duckdb-pvc

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: deeplynxbackend
  namespace: deeplynxv3-sandbox
spec:
  selector:
    matchLabels:
      app: deeplynxbackend
  template:
    metadata:
      labels:
        app: deeplynxbackend
    spec:
      containers:
        - name: deeplynxv3-sandbox
          image: ${CI_REGISTRY}/${CI_REGISTRY_PATH}:deeplynxv3-server-${GITHUB_RUN_NUMBER}
          imagePullPolicy: Always
          resources:
            limits:
              memory: "4Gi"
              cpu: "1500m"
          ports:
            - containerPort: 5000
          volumeMounts:
            - name: duckdb-storage
              mountPath: /data/duckdb
      volumes:
        - name: duckdb-storage
          persistentVolumeClaim:
            claimName: deeplynx-duckdb-pvc

---

#docs
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deeplynx-docs
  namespace: deeplynxv3-sandbox
spec:
  selector:
    matchLabels:
      app: deeplynx-docs
  template:
    metadata:
      labels:
        app: deeplynx-docs
    spec:
      containers:
        - name: deeplynxv3-sandbox
          image: ${CI_REGISTRY}/${CI_REGISTRY_PATH}:deeplynxv3-docs-${GITHUB_RUN_NUMBER}
          imagePullPolicy: Always
          resources:
            limits:
              memory: "4Gi"
              cpu: "1500m"
          ports:
            - containerPort: 3001

---

apiVersion: v1
kind: Service
metadata:
  name: deeplynxv3-service
  namespace: deeplynxv3-sandbox
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 3000
  selector:
    app: deeplynxv3

---

apiVersion: v1
kind: Service
metadata:
  name: deeplynxv3-backend-service
  namespace: deeplynxv3-sandbox
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 5000
  selector:
    app: deeplynxbackend

---

apiVersion: v1
kind: Service
metadata:
  name: deeplynxv3-docs-service
  namespace: deeplynxv3-sandbox
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 3001
  selector:
    app: deeplynx-docs

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: deeplynxv3-ingress
  namespace: deeplynxv3-sandbox
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/configuration-snippet: |
      more_clear_headers "strict-transport-security";
      more_clear_headers "x-content-type-options";
      more_clear_headers "x-frame-options";
      more_clear_headers "content-security-policy";
      more_set_headers "cache-Control: no-cache, no-store";
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
  rules:
    - host: deeplynx.test.inl.gov
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: deeplynxv3-service
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: deeplynxv3-backend-service
                port:
                  number: 80
          - path: /api/auth
            pathType: Prefix
            backend:
              service:  
                name: deeplynxv3-service
                port:  
                  number: 80 
          - path: /docs
            pathType: Prefix
            backend:
              service:  
                name: deeplynxv3-docs-service
                port:  
                  number: 80 

---

# # Database if needed for deployment
# Dummy change to force build.
# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   namespace: deeplynxv3-dev
#   labels:
#     app: deeplynxv3-db
#   name: deeplynxv3-db
# spec:
#   replicas: 1
#   selector:
#     matchLabels:
#       app: deeplynxv3-db
#   strategy:
#     type: Recreate
#   template:
#     metadata:
#       labels:
#         app: deeplynxv3-db
#     spec:
#       containers:
#         - env:
#             - name: POSTGRES_PASSWORD
#               valueFrom:
#                 secretKeyRef:
#                   name: deeplynxv3-secrets
#                   key: POSTGRES_PASSWORD
#             - name: POSTGRES_USER
#               value: ${POSTGRES_USER}
#             - name: POSTGRES_DB_NAME
#               value: ${POSTGRES_DB_NAME}
#           image: ${CI_REGISTRY}/${CI_REGISTRY_PATH}:deeplynxv3-db-${GITHUB_RUN_NUMBER}
#           name: deeplynxv3-db
#           ports:
#             - containerPort: 5432
#           volumeMounts:
#             - mountPath: "/var/lib/postgresql/data"
#               subPath: deeplynxv3
#               name: deeplynxv3-db-pvc
#           resources:
#             limits:
#               cpu: "250m"
#               memory: "1024M"
#       restartPolicy: Always
#       volumes:
#         - name: deeplynxv3-db-pvc
#           persistentVolumeClaim:
#             claimName: deeplynxv3-db-pvc
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: deeplynxv3-db-service
#   namespace: deeplynxv3-dev
# spec:
#   type: ClusterIP
#   ports:
#     - name: "5432"
#       port: 5432
#       targetPort: 5432
#   selector:
#     app: deeplynxv3-db
# ---

# # Storage

# apiVersion: v1
# kind: PersistentVolumeClaim
# metadata:
#   namespace: deeplynxv3-dev
#   labels:
#     app: deeplynxv3-db
#   name: deeplynxv3-db-pvc
# spec:
#   accessModes:
#     - ReadWriteOnce
#   resources:
#     requests:
#       storage: 1Gi
